@@ -1,7 +1,7 @@
 // qjackctlAbout.h
 //
 /****************************************************************************
-   Copyright (C) 2003-2023, rncbc aka Rui Nuno Capela. All rights reserved.
+   Copyright (C) 2003-2024, rncbc aka Rui Nuno Capela. All rights reserved.
 
    This program is free software; you can redistribute it and/or
    modify it under the terms of the GNU General Public License
@@ -24,16 +24,16 @@
 
 #include "config.h"
 
-#define QJACKCTL_TITLE      PACKAGE_NAME
+#define QJACKCTL_TITLE      "QjackCtl"
 
 #define QJACKCTL_SUBTITLE0  "JACK"
 #define QJACKCTL_SUBTITLE1  QJACKCTL_SUBTITLE0 " Audio Connection Kit"
 #define QJACKCTL_SUBTITLE2  "Qt GUI Interface"
 
-#define QJACKCTL_SUBTITLE   QJACKCTL_SUBTITLE1 " - " QJACKCTL_SUBTITLE2
-#define QJACKCTL_WEBSITE    "https://qjackctl.sourceforge.io"
-#define QJACKCTL_COPYRIGHT  "Copyright (C) 2003-2023, rncbc aka Rui Nuno Capela. All rights reserved."
+#define QJACKCTL_SUBTITLE   PROJECT_DESCRIPTION
+#define QJACKCTL_WEBSITE    PROJECT_HOMEPAGE_URL
 
+#define QJACKCTL_COPYRIGHT  "Copyright (C) 2003-2024, rncbc aka Rui Nuno Capela. All rights reserved."
 #define QJACKCTL_DOMAIN     "rncbc.org"
 
 #endif  // __qjackctlAbout_h
