@@ -7,6 +7,8 @@ GIT HEAD
 
 - Turkish (tr) translation added (by Orkun Arapoglu, thanks).
 
+- Updated copyright headers into the New Year (2024).
+
 
 0.9.12  2023-09-09  An End-of-Summer'23 Release.
 
